2nd Year Archive/_Fundamentals of Programming Languages/Semester 1/Assignment 1/Assignment 1 Grammar/gen/assignmentParser.java
// Generated from C:/Users/joeki/OneDrive - Sheffield Hallam University/_Fundamentals of Programming Languages/Assignment 1/Assignment 1 Grammar\assignment.g4 by ANTLR 4.9

    package com.assignment;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assignmentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, PROGBEGIN=16, 
		PROGEND=17, IDENTIFIER=18, VALUE=19, STRING=20, LETTER=21, UPPERCASE=22, 
		LOWERCASE=23, FLOAT=24, NUMBER=25, DIGIT=26, OP=27, ADD=28, SUB=29, MUL=30, 
		DIV=31, POW=32, EQUALS=33, BOOL_OP=34, COMPEQUALS=35, OR=36, AND=37, GTHAN=38, 
		LTHAN=39, LPARENS=40, RPARENS=41, LCURLY=42, RCURLY=43, LSQUARE=44, RSQUARE=45, 
		SCOLON=46, COLON=47, COMMA=48, POINT=49, SPEECHMARK=50, QUOTEMARK=51, 
		TRUE=52, FALSE=53, WHITESPACE=54;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_stat_assignment = 3, 
		RULE_stat_assign_array = 4, RULE_stat_input = 5, RULE_stat_output = 6, 
		RULE_stat_if = 7, RULE_stat_for = 8, RULE_stat_while = 9, RULE_value = 10, 
		RULE_expression = 11, RULE_operand = 12, RULE_array = 13, RULE_expr_boolean = 14, 
		RULE_bool_operand = 15, RULE_function_definition = 16, RULE_function_signature = 17, 
		RULE_funcblock = 18, RULE_function_call = 19, RULE_args = 20, RULE_return = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "stat_assignment", "stat_assign_array", 
			"stat_input", "stat_output", "stat_if", "stat_for", "stat_while", "value", 
			"expression", "operand", "array", "expr_boolean", "bool_operand", "function_definition", 
			"function_signature", "funcblock", "function_call", "args", "return"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'const'", "'input'", "'print'", "'if'", "'then'", "'else if'", 
			"'else'", "'end if'", "'for'", "'in'", "'end for'", "'while'", "'end while'", 
			"'function'", "'return'", "'A long time ago in a galaxy far far away...'", 
			"'The End'", null, null, null, null, null, null, null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'='", null, "'=='", "'||'", "'&&'", 
			"'>'", "'<'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", 
			"','", "'.'", "'\"'", "'''", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "PROGBEGIN", "PROGEND", "IDENTIFIER", "VALUE", 
			"STRING", "LETTER", "UPPERCASE", "LOWERCASE", "FLOAT", "NUMBER", "DIGIT", 
			"OP", "ADD", "SUB", "MUL", "DIV", "POW", "EQUALS", "BOOL_OP", "COMPEQUALS", 
			"OR", "AND", "GTHAN", "LTHAN", "LPARENS", "RPARENS", "LCURLY", "RCURLY", 
			"LSQUARE", "RSQUARE", "SCOLON", "COLON", "COMMA", "POINT", "SPEECHMARK", 
			"QUOTEMARK", "TRUE", "FALSE", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "assignment.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assignmentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGBEGIN() { return getToken(assignmentParser.PROGBEGIN, 0); }
		public TerminalNode PROGEND() { return getToken(assignmentParser.PROGEND, 0); }
		public List<Stat_assignmentContext> stat_assignment() {
			return getRuleContexts(Stat_assignmentContext.class);
		}
		public Stat_assignmentContext stat_assignment(int i) {
			return getRuleContext(Stat_assignmentContext.class,i);
		}
		public List<Stat_assign_arrayContext> stat_assign_array() {
			return getRuleContexts(Stat_assign_arrayContext.class);
		}
		public Stat_assign_arrayContext stat_assign_array(int i) {
			return getRuleContext(Stat_assign_arrayContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(PROGBEGIN);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==IDENTIFIER) {
				{
				setState(47);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(45);
					stat_assignment();
					}
					break;
				case 2:
					{
					setState(46);
					stat_assign_array();
					}
					break;
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13 || _la==LCURLY) {
				{
				setState(54);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LCURLY:
					{
					setState(52);
					block();
					}
					break;
				case T__13:
					{
					setState(53);
					function_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(PROGEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(assignmentParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(assignmentParser.RCURLY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(LCURLY);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__11) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(62);
				statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Stat_assignmentContext stat_assignment() {
			return getRuleContext(Stat_assignmentContext.class,0);
		}
		public Stat_assign_arrayContext stat_assign_array() {
			return getRuleContext(Stat_assign_arrayContext.class,0);
		}
		public Stat_inputContext stat_input() {
			return getRuleContext(Stat_inputContext.class,0);
		}
		public Stat_outputContext stat_output() {
			return getRuleContext(Stat_outputContext.class,0);
		}
		public Stat_ifContext stat_if() {
			return getRuleContext(Stat_ifContext.class,0);
		}
		public Stat_forContext stat_for() {
			return getRuleContext(Stat_forContext.class,0);
		}
		public Stat_whileContext stat_while() {
			return getRuleContext(Stat_whileContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentParser.SCOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(70);
				stat_assignment();
				}
				break;
			case 2:
				{
				setState(71);
				stat_assign_array();
				}
				break;
			case 3:
				{
				setState(72);
				stat_input();
				}
				break;
			case 4:
				{
				setState(73);
				stat_output();
				}
				break;
			case 5:
				{
				setState(74);
				stat_if();
				}
				break;
			case 6:
				{
				setState(75);
				stat_for();
				}
				break;
			case 7:
				{
				setState(76);
				stat_while();
				}
				break;
			case 8:
				{
				setState(77);
				function_call();
				setState(78);
				match(SCOLON);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_assignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(assignmentParser.EQUALS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentParser.SCOLON, 0); }
		public Stat_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_assignmentContext stat_assignment() throws RecognitionException {
		Stat_assignmentContext _localctx = new Stat_assignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stat_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(82);
				match(T__0);
				}
			}

			setState(85);
			match(IDENTIFIER);
			setState(86);
			match(EQUALS);
			setState(87);
			value();
			setState(88);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_assign_arrayContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(assignmentParser.EQUALS, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentParser.SCOLON, 0); }
		public Stat_assign_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_assign_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_assign_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_assign_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_assign_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_assign_arrayContext stat_assign_array() throws RecognitionException {
		Stat_assign_arrayContext _localctx = new Stat_assign_arrayContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stat_assign_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(90);
				match(T__0);
				}
			}

			setState(93);
			match(IDENTIFIER);
			setState(94);
			match(EQUALS);
			setState(95);
			array();
			setState(96);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_inputContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentParser.SCOLON, 0); }
		public Stat_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_inputContext stat_input() throws RecognitionException {
		Stat_inputContext _localctx = new Stat_inputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stat_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__1);
			setState(99);
			value();
			setState(100);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_outputContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentParser.SCOLON, 0); }
		public Stat_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_outputContext stat_output() throws RecognitionException {
		Stat_outputContext _localctx = new Stat_outputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stat_output);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__2);
			setState(103);
			value();
			setState(104);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_ifContext extends ParserRuleContext {
		public List<Expr_booleanContext> expr_boolean() {
			return getRuleContexts(Expr_booleanContext.class);
		}
		public Expr_booleanContext expr_boolean(int i) {
			return getRuleContext(Expr_booleanContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public Stat_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_ifContext stat_if() throws RecognitionException {
		Stat_ifContext _localctx = new Stat_ifContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stat_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__3);
			setState(107);
			expr_boolean();
			setState(108);
			match(T__4);
			setState(109);
			block();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5 || _la==T__6) {
				{
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(110);
					match(T__5);
					setState(111);
					expr_boolean();
					setState(112);
					match(T__4);
					setState(113);
					block();
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(120);
				match(T__6);
				setState(121);
				block();
				}
			}

			setState(124);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_forContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentParser.IDENTIFIER, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(assignmentParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(assignmentParser.NUMBER, i);
		}
		public TerminalNode COMMA() { return getToken(assignmentParser.COMMA, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Stat_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_for(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_for(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_forContext stat_for() throws RecognitionException {
		Stat_forContext _localctx = new Stat_forContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stat_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__8);
			setState(127);
			match(IDENTIFIER);
			setState(128);
			match(T__9);
			setState(129);
			match(NUMBER);
			setState(130);
			match(COMMA);
			setState(131);
			match(NUMBER);
			setState(132);
			block();
			setState(133);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_whileContext extends ParserRuleContext {
		public Expr_booleanContext expr_boolean() {
			return getRuleContext(Expr_booleanContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Stat_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).enterStat_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentListener ) ((assignmentListener)listener).exitStat_while(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentVisitor ) return ((assignmentVisitor<? extends T>)visitor).visitStat_while(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_whileContext stat_while() throws RecognitionException {
		Stat_whileContext _localctx = new Stat_whileContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stat_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__11);
			setState(136);
			expr_boolean();
			setState(137);
			block();
			setState(138);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
